<resources>
    <string name="app_name">Sense Music Clock</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="artwork">Album artwork</string>
    <string name="VOLUME_ADJUSTMENT">volume_adjustment</string>
    <string name="SHAREDPREFERENCES_NAME">smc_prefs</string>
    <string name="title_activity_standard_player">StandardPlayerActivity</string>

    <string name="track_count">%1$d曲</string>
    <string name="timer_button_label">Timer</string>
    <string name="alarm_button_label">Alarm</string>
    <string name="stop_watch_button_label">Stop\nwatch</string>
    <string name="timer_done_label">完了</string>
    <string name="morning">朝</string>
    <string name="addPlaylist">プレイリストに追加</string>
    <string name="blocklist_itemadd">ブロックリストに追加</string>
    <string name="smc_music_label">SMC_Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Edit">編集</string>
    <string name="Add">追加</string>
    <string name="Delete">削除</string>
    <string name="copy_Item">中身をコピー</string>
    <string name="copy_list">コピー</string>
    <string name="name_change">名前変更</string>
    <string name="use">使用する</string>
    <string name="display">表示</string>
    <string name="AddAndSave">保存(追加)</string>
    <string name="back">戻る</string>
    <string name="move_last">最後に移動</string>
    <string name="move_first">最初に移動</string>
    <string name="addList">リストに追加</string>
    <string name="play">再生</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>